<resources>
    <string name="app_name">FunDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_your_fundo">Login Your FunDo</string>
    <string name="register_fundo">Register FunDo</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="register">register</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back To Login</string>
    <string name="send">Send</string>
    <string name="page_title">Page Title</string>
    <string name="views">Views</string>
    <string name="account">Account</string>
    <string name="search_title">search</string>
    <string name="sign_out">Sign out</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="header_title">My FunDo</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="create_new_label">Create new label</string>
    <string name="archive">Archive</string>
    <string name="deleted">Deleted</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>