<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes"/>
        <item
            android:id="@+id/reminders"
            android:icon="@drawable/ic_reminders"
            android:title="@string/reminders"/>
        <item
            android:id="@+id/createNewLabel"
            android:icon="@drawable/ic_add"
            android:title="@string/create_new_label"/>
        <item
            android:id="@+id/archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive"/>
        <item
            android:id="@+id/deleted"
            android:icon="@drawable/ic_delete"
            android:title="@string/deleted"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/helpAndFeedback"
            android:icon="@drawable/ic_help"
            android:title="@string/help_and_feedback"/>
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out"
            android:checked="true"/>
    </group>
</menu>